# arxiv.py

./: .gitignore  .travis.yml  CHANGES.md  LICENSE  Makefile  README.md  arxiv.py  pyproject.toml  pytest.ini  release.sh  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: docs.yml  format.yaml  python-package.yml  python-test.yml  static-analysis.yaml
arxiv/: __init__.py  _feed.py  _version.py  api.py  arxiv-v1.py  arxiv.py  arxiv0.py  category.py  cli.py  config.py  core.py  errors.py  query.py  result.py  utils.py  version.py
arxiv/scripts/: download.py
docs/: arxiv.html  index.html  search.json
docs/arxiv/: api.html  arxiv.html  category.html  query.html
tests/: .gitignore  Makefile  conftest.py  downloads.py  invalid-id.py  test_api_bugs.py  test_cli.py  test_client.py  test_core.py  test_download.py  test_errors.py  test_package.py  test_query.py  test_result.py  test_search.py  test_start.py  test_utils.py
tests/fixtures/: __init__.py  id_0000.0000_s0_m100_8b51d9633a68.json  id_0808.05394_1707.08567_s0_m100_42e5aa0ec3af.json  id_0808.05394_s0_m100_7b0c7d0a7cdd.json  id_1605.08386_s0_m100_199195aa31ad.json  id_1707.08567_s0_m100_6a1afebfc6a3.json  id_2104.12255v1_s0_m100_6ae69987ffe1.json  id_abc_s0_m100_b79c8dcf6bc3.json  id_astro-ph_0601001_s0_m100_3150dca9dc76.json  id_hep-ex_0406020v1_s0_m100_84b15d66c0ce.json  id_list=1111.2011v2.xml  id_quant-ph_0201082v1_s0_m100_86989fe779ef.json  q_testing_s0_m100_cfe7536492ca.json  q_testing_s0_m10_bc5a6c384fe9.json  q_testing_s0_m10_df962dbeea2e.json  q_testing_s0_m15_80c242b59d59.json  q_testing_s10_m10_34e56e15aaac.json  q_testing_s20_m10_348a237fecab.json  q_testing_s30_m10_f2e39f0143dc.json  q_testing_s40_m10_96dd32eb854c.json  q_testing_s50_m10_7f488ab8598c.json  q_testing_s5_m10_c0e94a259d4a.json  q_testing_s5_m15_bbcf6b23085b.json  q_testing_s9_m15_0b78d4b4d476.json  search_query=au:del_maestro+AND+ti:"quantum+criticality".xml  search_query=au:del_maestro+AND+ti:checkerboard.xml  search_query=au:del_maestro+ANDNOT+%28ti:checkerboard+OR+ti:Pyrochlore%29.xml  search_query=au:del_maestro.xml  stale_fixture_abc123.json
