[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv"
dynamic = ["version"]
description = "Python wrapper for the arXiv API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lukas Schwab", email = "lukas.schwab@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "feedparser~=6.0.10",
    "requests~=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.2",
    "ruff>=0.1.2",
    "pdoc==14.5.1",
    "pip-audit>=1.1.2",
]
test = [
    "pytest>=6.2.2",
]

[project.urls]
Homepage = "https://github.com/lukasschwab/arxiv.py"
Repository = "https://github.com/lukasschwab/arxiv.py"
Documentation = "https://lukasschwab.me/arxiv.py/"
Issues = "https://github.com/lukasschwab/arxiv.py/issues"

# UV-specific configuration (ignored by pip/setuptools)
[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pytest>=6.2.2",
    "ruff>=0.1.2", 
    "pdoc==14.5.1",
    "pip-audit>=1.1.2",
]
test = [
    "pytest>=6.2.2",
]

# Tool configurations that work for both UV and traditional workflows
[tool.setuptools_scm]
write_to = "arxiv/_version.py"

[tool.setuptools.packages.find]
where = ["."] 
include = ["arxiv*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E501", "W191"]
select = [
    "E", "F", "W",
]
fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", 
    "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", 
    "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", 
    "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
addopts = "--verbose"
log_cli = true
log_cli_level = "DEBUG"
