[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "arxiv"
dynamic = ["version"]
description = "Python wrapper for the arXiv API"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Lukas Schwab", email = "lukas.schwab@gmail.com"}
]
keywords = ["arxiv", "api", "wrapper", "academic", "journals", "papers"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "feedparser~=6.0.10",
    "requests~=2.32.0",
    "typing_extensions>=4.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.2",
    "ruff>=0.1.2",
    "pdoc==14.5.1",
    "pip-audit>=1.1.2",
]
test = [
    "pytest>=6.2.2",
]

[project.urls]
Homepage = "https://github.com/lukasschwab/arxiv.py"
Repository = "https://github.com/lukasschwab/arxiv.py"
Documentation = "https://lukasschwab.me/arxiv.py/"
Issues = "https://github.com/lukasschwab/arxiv.py/issues"

# UV-specific configuration (ignored by pip/setuptools)
[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pytest>=6.2.2",
    "ruff>=0.1.2", 
    "pdoc==14.5.1",
    "pip-audit>=1.1.2",
    "mypy>=1.0.0",
    "types-requests",
]
test = [
    "pytest>=6.2.2",
]

# Modern build configuration with hatch-vcs
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "dirty-tag"

[tool.hatch.build.targets.wheel]
packages = ["arxiv"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E501", "W191"]
select = [
    "E", "F", "W",
]
fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", 
    "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", 
    "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", 
    "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
addopts = "--verbose"
log_cli = true
log_cli_level = "DEBUG"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "feedparser"
ignore_missing_imports = true
